Update API
1. Added service query param to /upload
2. Changed method to DELETE for /housekeeping
